[workspace]
members = [
  "amqp-type",
  "amqp-transport",
  "amqp-messaging",
  "amqp-transaction",
  "amqp-security",
]
resolver = "2"

[workspace.lints.clippy]
correctness = "deny"
suspicious = "warn"
perf = "warn"
pedantic = "warn"

[workspace.dependencies]
# Internal

# External
thiserror = "1.0.47"
tokio = {version = "1", features=["full"]}
uuid = {version = "1.4.1", features = ["v4"]}
tokio-stream = "0.1.16"
