[package]
name = "amqp-derive"
version = "0.1.0"
edition = "2021"
description = "A Proc Macro for use in the AMQP-Type crate. No Other! Generates Conversion impls for arbitrary structs into and from amqp_type::primitive::Primitive"

[lib]
proc-macro = true

[dependencies]
# internal

# external
proc-macro2 = "1.0.92"
syn = "2.0.93"
quote = "1.0.37"

[lints]
workspace = true
