[package]
name = "amqp-lib"
version = "0.1.0"
edition = "2021"


[features]
default = ["zero-length-encoding"]
zero-length-encoding = []

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.73"
bigdecimal = "0.4.1"
byteorder = "1.4.3"
bytes = "1.4.0"
thiserror = "1.0.47"
tokio = {version = "1", features=["full"]}
tracing = "0.1.37"
uuid = "1.4.1"
