[package]
name = "amqp-transport"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Internal dependencies
amqp-type = {path = "../amqp-type"}
amqp-error = {path = "../amqp-error"}

# External dependencies
thiserror = {workspace = true}
tokio = {workspace = true}
uuid = {workspace = true}
tokio-stream = {workspace = true}