[package]
name = "amqp-type"
version = "0.1.0"
edition = "2021"


[features]
default = []
zero-length-encoding = []

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
indexmap = "2.0.0"
thiserror = {workspace = true}
tokio = {workspace = true}
uuid = {workspace = true}
tokio-stream = {workspace = true}