[package]
name = "amqp-type"
version = "0.1.0"
edition = "2021"

[lints]
workspace = true

[features]
default = []
zero-length-encoding = []

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Internal
amqp-utils = {path = "../amqp-utils" }
amqp-error = {path = "../amqp-error"}

# External
indexmap = "2.0.0"
thiserror = {workspace = true}
tokio = {workspace = true}
uuid = {workspace = true}
tokio-stream = {workspace = true}